Complete frontend fixes and website improvements
Website updates:
- Fixed demo links to point to https://demo.carledgr.com
- Significantly reduced website sizing for better fit on all screens
- Reduced typography sizes (H1: 3rem→2.625rem, H2: 2.125rem→1.875rem, H3: 1.375rem→1.25rem)
- Reduced container width from 1200px to 1100px
- Reduced section padding from 4.5rem to 4rem globally
- Smaller card padding, icons, and grid gaps throughout
- Optimized for MacBook Air 13/14" and similar laptop screens
- Improved performance with faster transitions (0.3s→0.2s)

Frontend configuration fixes:
- Moved i18n translation files to public directory (fixes translation loading)
- Simplified config.js to rely only on config.json (removed env variable dependencies)
- Updated deployment script to modify config.json baseUrl per environment
- Production frontend uses https://api.carledgr.com/api
- Demo frontend uses https://demo-api.carledgr.com/api

This resolves translation loading issues and creates a more compact, responsive website experience.

--- a/website/index.html
+++ b/website/index.html
@@ -30,7 +30,7 @@
                         <option value="es">Español</option>
                     </select>
                 </div>
-                <a href="#" class="nav-demo-btn" data-translate="nav_demo">Try Our Live Demo</a>
+                <a href="https://demo.carledgr.com" class="nav-demo-btn" data-translate="nav_demo">Try Our Live Demo</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
                 <span class="bar"></span>
@@ -50,7 +50,7 @@
                     Track comprehensive expenses, monitor inventory status, and maximize profit margins with precision analytics.
                 </p>
                 <div class="hero-buttons">
-                    <a href="#" class="btn btn-primary" data-translate="hero_demo_btn">Try Our Live Demo</a>
+                    <a href="https://demo.carledgr.com" class="btn btn-primary" data-translate="hero_demo_btn">Try Our Live Demo</a>
                     <a href="#features" class="btn btn-secondary" data-translate="hero_learn_btn">Learn More</a>
                 </div>
             </div>
@@ -340,7 +340,7 @@
                 <h2 data-translate="cta_title">Ready to streamline your dealership operations?</h2>
                 <p data-translate="cta_desc">Join dealerships using CarLedgr to gain complete financial visibility and maximize profitability.</p>
                 <div class="cta-buttons">
-                    <a href="#" class="btn btn-primary btn-large" data-translate="cta_demo_btn">Try Our Live Demo</a>
+                    <a href="https://demo.carledgr.com" class="btn btn-primary btn-large" data-translate="cta_demo_btn">Try Our Live Demo</a>
                     <a href="#pricing" class="btn btn-secondary btn-large" data-translate="cta_plan_btn">Choose Your Plan</a>
                 </div>
             </div>
