--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/cl-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CarLedgr - Car Finance Management</title>
+    <title>CarLedgr - Smart Dealership Management Platform</title>
+    <meta name="description" content="Comprehensive dealership management system built specifically for vehicle repair and resale businesses. Track expenses, manage inventory, and maximize profitability with precision analytics." />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="src/styles/main.css">
