Fixed UI issues

--- a/website/cancel.html
+++ b/website/cancel.html
@@ -16,7 +16,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #fbbf24 0%, #f59e0b 100%);
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             padding: 2rem;
         }
         .cancel-card {
@@ -159,13 +159,6 @@
         </div>
     </div>
     
-    <script>
-        // Auto-redirect to pricing after 15 seconds if user doesn't click
-        setTimeout(() => {
-            if (confirm('Would you like to view our pricing plans again?')) {
-                window.location.href = '/#pricing';
-            }
-        }, 15000);
-    </script>
+
 </body>
 </html> 
