--- a/backend/src/email-templates/password-reset.html
+++ b/backend/src/email-templates/password-reset.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your {{APP_NAME}} Account is Ready</title>
+    <title>Account Access - {{APP_NAME}}</title>
     <style>
         body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; margin: 0; padding: 20px; background-color: #f4f4f4; }
         .container { max-width: 600px; margin: 0 auto; background: white; padding: 30px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
@@ -13,36 +13,33 @@
         .credential-item { margin: 10px 0; }
         .credential-label { font-weight: bold; color: #495057; }
         .credential-value { font-family: monospace; background: #e9ecef; padding: 5px 8px; border-radius: 4px; }
-        .plan-info { background: #d4edda; padding: 15px; border-radius: 8px; margin: 20px 0; border-left: 4px solid #28a745; }
         .warning { background: #fff3cd; padding: 15px; border-radius: 8px; margin: 20px 0; border-left: 4px solid #ffc107; }
         .footer { text-align: center; margin-top: 30px; color: #6c757d; font-size: 14px; }
         .button { display: inline-block; background: #007bff; color: white; padding: 12px 24px; text-decoration: none; border-radius: 5px; margin: 10px 0; }
+        .security-notice { background: #f8d7da; padding: 15px; border-radius: 8px; margin: 20px 0; border-left: 4px solid #dc3545; }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="logo">🚗 {{APP_NAME}}</div>
-            <h2>Welcome to {{APP_NAME}}!</h2>
-            <p>Your account is ready and waiting for you</p>
+            <h2>Password Reset</h2>
+            <p>Here are your temporary login credentials</p>
         </div>
 
         <p>Hi there!</p>
         
-        <p>Great news! Your {{APP_NAME}} account for {{ORGANIZATION_NAME}} is all set up and ready to go.</p>
-
-        <div class="plan-info">
-            <h3>📋 Account Details</h3>
-            <p><strong>Organization:</strong> {{ORGANIZATION_NAME}}</p>
-            <p><strong>Service Plan:</strong> {{LICENSE_TYPE}}</p>
-            <p><strong>Status:</strong> Active</p>
-        </div>
+        <p>No worries! Here are your temporary login credentials for {{ORGANIZATION_NAME}}:</p>
 
         <div class="credentials">
-            <h3>🔐 Your Login Credentials</h3>
+            <h3>🔐 Your Temporary Login Credentials</h3>
+            <div class="credential-item">
+                <span class="credential-label">Organization:</span><br>
+                <span class="credential-value">{{ORGANIZATION_NAME}}</span>
+            </div>
             <div class="credential-item">
                 <span class="credential-label">Email:</span><br>
-                <span class="credential-value">{{OWNER_EMAIL}}</span>
+                <span class="credential-value">{{USER_EMAIL}}</span>
             </div>
             <div class="credential-item">
                 <span class="credential-label">Temporary Password:</span><br>
@@ -51,9 +48,8 @@
         </div>
 
         <div class="warning">
-            <h3>⚠️ Important Security Notice</h3>
-            <p><strong>Please change your password immediately after logging in!</strong></p>
-            <p>This temporary password is only for your first login. For security, please update it to something secure and memorable.</p>
+            <h3>⚠️ Quick Security Note</h3>
+            <p><strong>Don't forget to change this password after logging in!</strong> This temporary password is just to get you back into your account.</p>
         </div>
 
         <div style="text-align: center; margin: 30px 0;">
@@ -62,23 +58,19 @@
             </a>
         </div>
 
-        <h3>🚀 Getting Started</h3>
-        <ol>
-            <li>Click the login button above</li>
-            <li>Log in with your credentials</li>
-            <li>Change your password in Settings</li>
-            <li>Start adding your vehicles and tracking expenses</li>
-        </ol>
+        <div class="security-notice">
+            <h3>🔒 Didn't Request This?</h3>
+            <p>If you didn't request this, just ignore this email. Your account is still secure!</p>
+        </div>
 
-        <h3>💡 Need Help?</h3>
-        <p>We're here to help you get started with {{APP_NAME}}. Reach out anytime at {{SUPPORT_EMAIL}} if you have questions!</p>
+        <h3>💡 Questions?</h3>
+        <p>Need help? Just reply to this email or reach out at {{SUPPORT_EMAIL}}.</p>
 
         <div class="footer">
-            <p>Happy to have you aboard!</p>
-            <p>The {{APP_NAME}} Team 🚗</p>
+            <p>Hope this helps!<br>The {{APP_NAME}} Team 🚗</p>
             <hr style="margin: 20px 0; border: none; border-top: 1px solid #dee2e6;">
             <p style="font-size: 12px; color: #6c757d;">
-                This email was sent because you signed up for {{APP_NAME}}. 
+                This email was sent because you requested a password reset. 
                 Questions? Just reply to this email or contact {{SUPPORT_EMAIL}}.
             </p>
             <p style="font-size: 11px; color: #868e96; margin-top: 15px;">
