Add comprehensive Google Analytics tracking implementation
- Add Google Analytics Global Site Tag (gtag) to all pages
- Implement comprehensive event tracking for user interactions:
  * Demo button clicks with conversion tracking
  * Pricing plan interactions and checkout events
  * Language change tracking
  * Navigation and mobile menu usage
  * Form interactions and modal events
  * Section engagement and scroll tracking
- Add purchase tracking on success page
- Add checkout abandonment tracking on cancel page
- Create setup-analytics.js script for easy configuration
- Update config.json with analytics configuration structure
- Track conversions, ecommerce events, and user journey

--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=MEASUREMENT_ID_PLACEHOLDER"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        // Will be configured dynamically from config.json
+        gtag('config', 'MEASUREMENT_ID_PLACEHOLDER', {
+            page_title: document.title,
+            page_location: window.location.href
+        });
+    </script>
 </head>
 <body>
     <!-- Navigation -->
