--- a/website/cancel.html
+++ b/website/cancel.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout Cancelled - CarLedgr</title>
-    <meta name="description" content="Your checkout was cancelled. You can try again anytime or contact us for assistance.">
+    <meta name="description" content="Your checkout was cancelled. You can try again anytime or explore our demo.">
     <link rel="icon" type="image/png" href="img/cl-logo.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=MEASUREMENT_ID_PLACEHOLDER"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'MEASUREMENT_ID_PLACEHOLDER');
+        
+        // Track checkout abandonment
+        document.addEventListener('DOMContentLoaded', function() {
+            gtag('event', 'checkout_abandoned', {
+                event_category: 'ecommerce',
+                event_label: 'user_cancelled_checkout'
+            });
+        });
+    </script>
     <style>
         .cancel-container {
             min-height: 100vh;
