Configure Google Analytics with measurement ID G-R2ZRM29Y1K
- Replace all placeholder measurement IDs with actual GA4 measurement ID
- All HTML files now have proper tracking configuration
- Ready for deployment with full analytics tracking

--- a/website/cancel.html
+++ b/website/cancel.html
@@ -12,12 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=MEASUREMENT_ID_PLACEHOLDER"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R2ZRM29Y1K"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'MEASUREMENT_ID_PLACEHOLDER');
+        gtag('config', 'G-R2ZRM29Y1K');
         
         // Track checkout abandonment
         document.addEventListener('DOMContentLoaded', function() {
