--- a/website/index.html
+++ b/website/index.html
@@ -12,13 +12,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=MEASUREMENT_ID_PLACEHOLDER"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R2ZRM29Y1K"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         // Will be configured dynamically from config.json
-        gtag('config', 'MEASUREMENT_ID_PLACEHOLDER', {
+        gtag('config', 'G-R2ZRM29Y1K', {
             page_title: document.title,
             page_location: window.location.href
         });
