Add comprehensive user documentation with sidebar navigation and consistent branding
- Created user-documentation.html with complete CarLedgr feature documentation
- Updated design to match marketing website (blue theme, Inter font, consistent styling)
- Added fixed navbar with logo linking back to homepage
- Implemented sidebar navigation for better documentation UX
- Added footer matching marketing website design
- Updated marketing website footer to link to documentation
- Responsive design for mobile and tablet devices
- Covers all features: car management, maintenance, expenses, reports, settings, user roles
- Includes additional features section and support information

--- a/website/index.html
+++ b/website/index.html
@@ -380,7 +380,7 @@
                 <div class="footer-section">
                     <h4 data-translate="footer_support">Support</h4>
                     <ul>
-                        <li><a href="#" data-translate="footer_docs">Documentation</a></li>
+                        <li><a href="user-documentation.html" data-translate="footer_docs">Documentation</a></li>
                         <li><a href="mailto:sales@carledgr.com" data-translate="footer_sales">Sales</a></li>
                         <li><a href="mailto:support@carledgr.com" data-translate="footer_support_contact">Support</a></li>
                     </ul>
