Update cancel.html and success.html to match marketing website design
- Updated color scheme from purple gradients to blue theme using CSS variables
- Added consistent navigation header with logo linking to homepage
- Added footer matching marketing website design
- Updated all styling to use marketing website's design system
- Added prominent spam folder notice in success page for login credentials
- Fixed button links to use proper index.html references
- Maintained mobile responsiveness and accessibility
- Consistent branding across all website pages

--- a/website/success.html
+++ b/website/success.html
@@ -42,11 +42,11 @@
     </script>
     <style>
         .success-container {
-            min-height: 100vh;
+            min-height: calc(100vh - 8rem);
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: var(--bg-secondary);
             padding: 2rem;
         }
         .success-card {
@@ -55,7 +55,8 @@
             padding: 3rem;
             max-width: 600px;
             text-align: center;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
+            box-shadow: var(--shadow-xl);
+            border: 1px solid var(--border-color);
         }
         .success-icon {
             width: 80px;
@@ -72,24 +73,24 @@
         .success-title {
             font-size: 2.5rem;
             font-weight: 700;
-            color: #1a1a1a;
+            color: var(--text-primary);
             margin-bottom: 1rem;
         }
         .success-subtitle {
             font-size: 1.2rem;
-            color: #666;
+            color: var(--text-secondary);
             margin-bottom: 2rem;
             line-height: 1.6;
         }
         .success-steps {
-            background: #f8fafc;
+            background: var(--bg-secondary);
             border-radius: 12px;
             padding: 2rem;
             margin: 2rem 0;
             text-align: left;
         }
         .success-steps h3 {
-            color: #1a1a1a;
+            color: var(--text-primary);
             margin-bottom: 1rem;
             font-size: 1.3rem;
         }
@@ -98,7 +99,7 @@
         }
         .success-steps li {
             margin-bottom: 0.8rem;
-            color: #555;
+            color: var(--text-secondary);
             line-height: 1.5;
         }
         .success-actions {
@@ -108,12 +109,27 @@
             flex-wrap: wrap;
             margin-top: 2rem;
         }
+        .email-notice {
+            background: #eff6ff;
+            border: 1px solid #bfdbfe;
+            border-radius: 8px;
+            padding: 1.5rem;
+            margin-top: 2rem;
+        }
+        .email-notice h4 {
+            color: var(--primary-color);
+            margin-bottom: 0.5rem;
+        }
+        .email-notice p {
+            color: var(--primary-dark);
+            margin: 0;
+        }
         .contact-info {
             background: #fff7ed;
             border: 1px solid #fed7aa;
             border-radius: 8px;
             padding: 1.5rem;
-            margin-top: 2rem;
+            margin-top: 1rem;
         }
         .contact-info h4 {
             color: #ea580c;
@@ -126,6 +142,28 @@
     </style>
 </head>
 <body>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <img src="img/cl-logo.png" alt="CarLedgr Logo" class="logo-img">
+                <h2>CarLedgr</h2>
+            </div>
+            <div class="nav-menu" id="nav-menu">
+                <a href="index.html#features" class="nav-link">Features</a>
+                <a href="index.html#advantages" class="nav-link">Why Choose Us</a>
+                <a href="index.html#pricing" class="nav-link">Pricing</a>
+                <a href="index.html#contact" class="nav-link">Contact</a>
+                <a href="https://demo.carledgr.com" class="nav-demo-btn">Try Our Live Demo</a>
+            </div>
+            <div class="nav-toggle" id="nav-toggle">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </div>
+    </nav>
+
     <div class="success-container">
         <div class="success-card">
             <div class="success-icon">
@@ -146,12 +184,20 @@
                     <li><strong>Explore features</strong> - Take advantage of our comprehensive reporting and management tools</li>
                 </ol>
             </div>
+
+            <div class="email-notice">
+                <h4>📧 Important: Check Your Email</h4>
+                <p>
+                    Your login credentials have been sent to your email address. 
+                    <strong>Please check your spam/junk folder</strong> if you don't see the email in your inbox within a few minutes.
+                </p>
+            </div>
             
             <div class="success-actions">
                 <a href="https://demo.carledgr.com" class="btn btn-primary btn-large">
                     Access Your Dashboard
                 </a>
-                <a href="/" class="btn btn-secondary btn-large">
+                <a href="index.html" class="btn btn-secondary btn-large">
                     Return to Homepage
                 </a>
             </div>
@@ -165,7 +211,39 @@
             </div>
         </div>
     </div>
-    
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>CarLedgr</h3>
+                    <p>Professional dealership management for vehicle repair and resale businesses.</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Product</h4>
+                    <ul>
+                        <li><a href="index.html#features">Features</a></li>
+                        <li><a href="index.html#pricing">Pricing</a></li>
+                        <li><a href="https://demo.carledgr.com">Demo</a></li>
+                        <li><a href="index.html#pricing">Add-ons</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Support</h4>
+                    <ul>
+                        <li><a href="user-documentation.html">Documentation</a></li>
+                        <li><a href="mailto:sales@carledgr.com">Sales</a></li>
+                        <li><a href="mailto:support@carledgr.com">Support</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 CarLedgr. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html> 
