feat: Complete car status enhancement and optimize backend startup
- Added 'in_repair' status to car workflow (pending → in_repair → in_stock → sold)
- Updated default car status from 'in_stock' to 'pending' for new cars
- Added in_repair cards to inventory and maintenance reports with date filtering
- Updated navigation from 'Cars' to 'Cars Inventory' in all languages
- Implemented smart default categories sync using file modification time tracking
- Added system_info table to track file changes and prevent unnecessary syncing
- Removed unnecessary migrations (roles, license checks, column additions)
- Optimized backend startup performance - only syncs when config actually changes
- Updated API documentation and user documentation
- Full multilingual support (English, Spanish, Arabic, French)

--- a/website/index.html
+++ b/website/index.html
@@ -41,6 +41,7 @@
                     <select id="language-select">
                         <option value="en">English</option>
                         <option value="es">Español</option>
+                        <option value="fr">Français</option>
                     </select>
                 </div>
                 <a href="https://demo.carledgr.com" class="nav-demo-btn" data-translate="nav_demo">Try Our Live Demo</a>
@@ -154,7 +155,7 @@
                         </svg>
                     </div>
                     <h3 data-translate="feature6_title">Multi-Language & User-Friendly</h3>
-                    <p data-translate="feature6_desc">Available in English, Spanish, and Arabic. Intuitive interface with VIN auto-population, smart search by vin/make/model/color, and exceptional user experience design.</p>
+                    <p data-translate="feature6_desc">Available in English, Spanish, Arabic, and French. Intuitive interface with VIN auto-population, smart search by vin/make/model/color, and exceptional user experience design.</p>
                 </div>
             </div>
         </div>
