feat: enhance marketing website with demo page, translations, and clickable logos
- Add comprehensive demo-info.html page with login credentials and user role information
- Update all demo buttons to redirect to demo-info page before accessing live demo
- Add full French language support and translations for demo page
- Fix copyright year consistency (2024 → 2025) across all pages
- Add AA Systems LLC attribution: 'Developed by AA Systems LLC'
- Make all logos clickable with navigation back to homepage
- Fix JavaScript demo button handling for new demo-info.html links
- Add Google Analytics tracking to demo-info page
- Update feature descriptions to mention French language support
- Improve user experience with proper new tab opening for live demo access

--- a/website/index.html
+++ b/website/index.html
@@ -28,10 +28,10 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">
+            <a href="index.html" class="nav-logo">
                 <img src="img/cl-logo.png" alt="CarLedgr Logo" class="logo-img">
                 <h2>CarLedgr</h2>
-            </div>
+            </a>
             <div class="nav-menu" id="nav-menu">
                 <a href="#features" class="nav-link" data-translate="nav_features">Features</a>
                 <a href="#advantages" class="nav-link" data-translate="nav_why_choose">Why Choose Us</a>
@@ -44,7 +44,7 @@
                         <option value="fr">Français</option>
                     </select>
                 </div>
-                <a href="https://demo.carledgr.com" class="nav-demo-btn" data-translate="nav_demo">Try Our Live Demo</a>
+                <a href="demo-info.html" class="nav-demo-btn" data-translate="nav_demo">Try Our Live Demo</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
                 <span class="bar"></span>
@@ -64,7 +64,7 @@
                     Track comprehensive expenses, monitor inventory status, and maximize profit margins with precision analytics.
                 </p>
                 <div class="hero-buttons">
-                    <a href="https://demo.carledgr.com" class="btn btn-primary" data-translate="hero_demo_btn">Try Our Live Demo</a>
+                    <a href="demo-info.html" class="btn btn-primary" data-translate="hero_demo_btn">Try Our Live Demo</a>
                     <a href="#features" class="btn btn-secondary" data-translate="hero_learn_btn">Learn More</a>
                 </div>
             </div>
@@ -354,7 +354,7 @@
                 <h2 data-translate="cta_title">Ready to streamline your dealership operations?</h2>
                 <p data-translate="cta_desc">Join dealerships using CarLedgr to gain complete financial visibility and maximize profitability.</p>
                 <div class="cta-buttons">
-                    <a href="https://demo.carledgr.com" class="btn btn-primary btn-large" data-translate="cta_demo_btn">Try Our Live Demo</a>
+                    <a href="demo-info.html" class="btn btn-primary btn-large" data-translate="cta_demo_btn">Try Our Live Demo</a>
                     <a href="#pricing" class="btn btn-secondary btn-large" data-translate="cta_plan_btn">Choose Your Plan</a>
                 </div>
             </div>
@@ -388,7 +388,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p data-translate="footer_copyright">&copy; 2025 CarLedgr. All rights reserved.</p>
+                <p data-translate="footer_copyright">&copy; 2025 CarLedgr. All rights reserved. Developed by AA Systems LLC.</p>
             </div>
         </div>
     </footer>
