--- a/website/success.html
+++ b/website/success.html
@@ -145,16 +145,16 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">
+            <a href="index.html" class="nav-logo">
                 <img src="img/cl-logo.png" alt="CarLedgr Logo" class="logo-img">
                 <h2>CarLedgr</h2>
-            </div>
+            </a>
             <div class="nav-menu" id="nav-menu">
                 <a href="index.html#features" class="nav-link">Features</a>
                 <a href="index.html#advantages" class="nav-link">Why Choose Us</a>
                 <a href="index.html#pricing" class="nav-link">Pricing</a>
                 <a href="index.html#contact" class="nav-link">Contact</a>
-                <a href="https://demo.carledgr.com" class="nav-demo-btn">Try Our Live Demo</a>
+                <a href="demo-info.html" class="nav-demo-btn">Try Our Live Demo</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
                 <span class="bar"></span>
@@ -239,7 +239,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 CarLedgr. All rights reserved.</p>
+                <p>&copy; 2025 CarLedgr. All rights reserved. Developed by AA Systems LLC.</p>
             </div>
         </div>
     </footer>
