--- a/website/cancel.html
+++ b/website/cancel.html
@@ -132,16 +132,16 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">
+            <a href="index.html" class="nav-logo">
                 <img src="img/cl-logo.png" alt="CarLedgr Logo" class="logo-img">
                 <h2>CarLedgr</h2>
-            </div>
+            </a>
             <div class="nav-menu" id="nav-menu">
                 <a href="index.html#features" class="nav-link">Features</a>
                 <a href="index.html#advantages" class="nav-link">Why Choose Us</a>
                 <a href="index.html#pricing" class="nav-link">Pricing</a>
                 <a href="index.html#contact" class="nav-link">Contact</a>
-                <a href="https://demo.carledgr.com" class="nav-demo-btn">Try Our Live Demo</a>
+                <a href="demo-info.html" class="nav-demo-btn">Try Our Live Demo</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
                 <span class="bar"></span>
@@ -165,7 +165,7 @@
             <div class="cancel-options">
                 <h3>What would you like to do next?</h3>
                 <ul>
-                    <li><strong>Try our live demo</strong> - Experience CarLedgr with sample data</li>
+                    <li><strong><a href="demo-info.html">Try our live demo</a></strong> - Experience CarLedgr with sample data</li>
                     <li><strong>Review our plans</strong> - Take another look at our pricing options</li>
                     <li><strong>Contact sales</strong> - Get answers to any questions you might have</li>
                     <li><strong>Complete your purchase</strong> - Ready to get started? Try again anytime</li>
@@ -226,7 +226,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 CarLedgr. All rights reserved.</p>
+                <p>&copy; 2025 CarLedgr. All rights reserved. Developed by AA Systems LLC.</p>
             </div>
         </div>
     </footer>
