--- a/website/user-documentation.html
+++ b/website/user-documentation.html
@@ -504,7 +504,7 @@
                 <a href="index.html#advantages" class="nav-link">Why Choose Us</a>
                 <a href="index.html#pricing" class="nav-link">Pricing</a>
                 <a href="index.html#contact" class="nav-link">Contact</a>
-                <a href="https://demo.carledgr.com" class="nav-demo-btn">Try Our Live Demo</a>
+                <a href="demo-info.html" class="nav-demo-btn">Try Our Live Demo</a>
             </div>
         </div>
     </nav>
@@ -1238,7 +1238,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 CarLedgr. All rights reserved.</p>
+                <p>&copy; 2025 CarLedgr. All rights reserved. Developed by AA Systems LLC.</p>
             </div>
         </div>
     </footer>
