Added link to app prod

--- a/website/index.html
+++ b/website/index.html
@@ -44,7 +44,7 @@
                         <option value="fr">Français</option>
                     </select>
                 </div>
-                <a href="demo-info.html" class="nav-demo-btn" data-translate="nav_demo">Try Our Live Demo</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://app.carledgr.com" class="nav-demo-btn" data-translate="nav_login">Login (Existing Customers)</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
                 <span class="bar"></span>
