--- a/website/user-documentation.html
+++ b/website/user-documentation.html
@@ -504,7 +504,7 @@
                 <a href="index.html#advantages" class="nav-link">Why Choose Us</a>
                 <a href="index.html#pricing" class="nav-link">Pricing</a>
                 <a href="index.html#contact" class="nav-link">Contact</a>
-                <a href="demo-info.html" class="nav-demo-btn">Try Our Live Demo</a>
+                <a href="https://app.carledgr.com" class="nav-demo-btn">Login (Existing Customers)</a>
             </div>
         </div>
     </nav>
