--- a/website/demo-info.html
+++ b/website/demo-info.html
@@ -43,7 +43,7 @@
                         <option value="fr">Français</option>
                     </select>
                 </div>
-                <a href="demo-info.html" class="nav-demo-btn">Try Our Live Demo</a>
+                <a href="https://app.carledgr.com" class="nav-demo-btn">Login (Existing Customers)</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
                 <span class="bar"></span>
