Added free trial 15 days

--- a/website/success.html
+++ b/website/success.html
@@ -6,7 +6,7 @@
     <title>Welcome to CarLedgr - Payment Successful</title>
     <meta name="description" content="Your CarLedgr subscription is now active! Check your email for login credentials.">
     <link rel="icon" type="image/png" href="img/cl-logo.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=1.1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
