--- a/website/cancel.html
+++ b/website/cancel.html
@@ -6,7 +6,7 @@
     <title>Checkout Cancelled - CarLedgr</title>
     <meta name="description" content="Your checkout was cancelled. You can try again anytime or explore our demo.">
     <link rel="icon" type="image/png" href="img/cl-logo.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=1.1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
