--- a/website/demo-info.html
+++ b/website/demo-info.html
@@ -6,7 +6,7 @@
     <title>CarLedgr Demo Access - Try Our Live Demo</title>
     <meta name="description" content="Access the CarLedgr live demo with sample data. Get login credentials and explore our dealership management platform with different user roles.">
     <link rel="icon" type="image/png" href="img/cl-logo.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=1.1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
