--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
     <title>CarLedgr - Smart Dealership Management Platform</title>
     <meta name="description" content="Comprehensive dealership management system built specifically for vehicle repair and resale businesses. Track expenses, manage inventory, and maximize profitability with precision.">
     <link rel="icon" type="image/png" href="img/cl-logo.png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=1.1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
