Fixed inactive orgs and added SEO

--- a/backend/src/email-templates/password-reset.html
+++ b/backend/src/email-templates/password-reset.html
@@ -52,19 +52,13 @@
             <p><strong>Don't forget to change this password after logging in!</strong> This temporary password is just to get you back into your account.</p>
         </div>
 
-        <div style="text-align: center; margin: 30px 0;">
-            <a href="{{FRONTEND_URL}}" class="button">
-                Login to {{APP_NAME}}
-            </a>
-        </div>
-
         <div class="security-notice">
             <h3>🔒 Didn't Request This?</h3>
             <p>If you didn't request this, just ignore this email. Your account is still secure!</p>
         </div>
 
         <h3>💡 Questions?</h3>
-        <p>Need help? Just reply to this email or reach out at {{SUPPORT_EMAIL}}.</p>
+        <p>Need help? Just reach out at {{SUPPORT_EMAIL}}.</p>
 
         <div class="footer">
             <p>Hope this helps!<br>The {{APP_NAME}} Team 🚗</p>
