Updated welcome email

--- a/backend/src/email-templates/welcome.html
+++ b/backend/src/email-templates/welcome.html
@@ -57,7 +57,7 @@
         </div>
 
         <div style="text-align: center; margin: 30px 0;">
-            <a href="{{FRONTEND_URL}}" class="button">
+            <a href="https://app.carledgr.com" class="button">
                 Login to {{APP_NAME}}
             </a>
         </div>
@@ -66,7 +66,7 @@
         <ol>
             <li>Click the login button above</li>
             <li>Log in with your credentials</li>
-            <li>Change your password in Settings</li>
+            <li>Change your password in Update Profile</li>
             <li>Start adding your vehicles and tracking expenses</li>
         </ol>
 
