--- a/backend/src/email-templates/subscription-status.html
+++ b/backend/src/email-templates/subscription-status.html
@@ -30,7 +30,7 @@
         </div>
         {{/if}}
 
-        <p>If you have any questions, please contact our support team at {{SUPPORT_EMAIL}}.</p>
+        <p>If you have any questions, please contact our support team at {{SUPPORT_EMAIL}}. Thank you for using {{APP_NAME}}!</p>
 
         <div class="footer">
             <p>Best regards,<br>The {{APP_NAME}} Team</p>
