--- a/website/success.html
+++ b/website/success.html
@@ -224,7 +224,7 @@
             </div>
             
             <div class="success-actions">
-                <a href="https://app.carledgr.com" class="btn btn-primary btn-large">
+                <a href="https://demo-app.carledgr.com" class="btn btn-primary btn-large">
                     Access Your Dashboard
                 </a>
                 <a href="index.html" class="btn btn-secondary btn-large">
