--- a/website/index.html
+++ b/website/index.html
@@ -456,9 +456,20 @@
                         <li><a href="mailto:support@carledgr.com" data-translate="footer_support_contact">Support</a></li>
                     </ul>
                 </div>
+                <div class="footer-section">
+                    <h4>Legal</h4>
+                    <ul>
+                        <li><a href="terms-of-service.html">Terms of Service</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="footer-bottom">
                 <p data-translate="footer_copyright">&copy; 2025 CarLedgr. All rights reserved. Developed by AA Systems LLC.</p>
+                <div class="legal-links">
+                    <a href="terms-of-service.html">Terms</a> • 
+                    <a href="privacy-policy.html">Privacy</a>
+                </div>
             </div>
         </div>
     </footer>
